--- a/index.html
+++ b/index.html
@@ -116,14 +116,10 @@
         <div class="service-info">
           <h4>Développeur Front-end</h4>
           <p>
-            1.Développement d'Interfaces Réactives : Frameworks modernes
-            comme React, Angular pour développer des interfaces réactives et
-            dynamiques qui fonctionnent sur divers appareils et résolutions d'écran.
-            2. Intégration des APIs et Services Backend
-            Connexion avec les APIs : Intégration des services backend via des APIs RESTful
+            1.Frameworks modernes: React, Angular pour développer des interfaces réactives et
+            dynamiques.
+            2. Intégration des services backend via des APIs RESTful
             pour assurer une communication efficace entre le front-end et le back-end.
-            Gestion des États : bibliothèques de gestion des états comme Hooks
-            pour maintenir l'état de l'application de manière prévisible et scalable.
             <a href="#" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -132,13 +128,10 @@
       <div class="service-box">
         <div class="service-info">
           <h4>Développeur Back-end</h4>
-          <p> Conception et Développement de Systèmes Backend
-            Développement de Serveurs et d'API : Conception et développement de serveurs
-            robustes et d'API RESTful en utilisant des technologies telles que Node.js,
+          <p> Conception et développement de serveurs
+            robustes et d'API RESTful avec Node.js,
             Express, et Spring Boot.
-            Gestion de Bases de Données : Conception et gestion de bases de données
-            relationnelles (MySQL, PostgreSQL, SQL Server) et non relationnelles pour
-            garantir la fiabilité et la performance des applications.
+            Conception et gestion de bases de données (MySQL, PostgreSQL, SQL Server).
             <a href="#" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -148,11 +141,9 @@
         <div class="service-info">
           <h4>Tests et QA de Logiciel</h4>
           <p>
-            Tests Unitaires et Intégration : Écriture et exécution de tests unitaires et d'intégration
-            en utilisant des frameworks comme Jest, Mocha, et Cypress pour garantir la qualité et la
+            Écriture et exécution de tests unitaires et d'intégration
+            en utilisant des frameworks comme Jest, Mocha, Pstman pour garantir la qualité et la
             fiabilité des applications.
-            Débogage et Résolution de Problèmes : Utilisation d'outils de débogage et d'inspection tels
-            que Chrome DevTools pour identifier et corriger rapidement les bugs et les problèmes de performance.
             <a href="#" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
