--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </header>
   <section class="home" id="home">
     <div class="home-content">
-      <h1>Hello, je suis <span>Jean</span></h1>
-      <h6 class="text-animation">Je suis un<span> </span></h6>
+      <!--<h1>Hello, je suis <span>Jean</span></h1>-->
+      <h6 class="text-animation"><span> </span></h6>
       <p>
         Développeur Full Stack passionné par la création d'applications web robustes et évolutives.
         Expertise en technologies front-end et back-end telles que HTML, CSS, JavaScript (React, Angular), Express,
@@ -153,11 +153,11 @@
     </div>
   </section>
   <footer class="footer">
-    <div class="social">
+    <!--<div class="social">
       <a href="https://www.linkedin.com/in/jean-therane-analyst-programmer/"><i class='bx bxl-linkedin'></i></a>
       <a href="#"><i class='bx bxl-github'></i></box-icon></a>
       <a href="#"><i class='bx bxl-twitter'></i></box-icon></a>
-    </div>
+    </div> -->
     <ul>
       <li>Email: jewathe@gmail.com</li>
       <li>Phone: (418) 655 2586</li>
