--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </div>
       <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Front-end</h4>
+          <h4>Développeur Front-End</h4>
           <p>
             1.Frameworks modernes: React, Angular pour développer des interfaces réactives et
             dynamiques.
@@ -127,7 +127,7 @@
       </div>
       <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Back-end</h4>
+          <h4>Développeur Back-End</h4>
           <p> Conception et développement de serveurs
             robustes et d'API RESTful avec Node.js,
             Express, et Spring Boot.
