--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/jean-therane-analyst-programmer/"><i class='bx bxl-linkedin'></i></a>
-        <a href="#"><i class='bx bxl-github'></i></box-icon></a>
+        <a href="https://github.com/jewathe/Projects"><i class='bx bxl-github'></i></box-icon></a>
         <a href="#"><i class='bx bxl-twitter'></i></box-icon></a>
       </div>
       <!--
