--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/jean-therane-analyst-programmer/"><i class='bx bxl-linkedin'></i></a>
-        <a href="https://github.com/jewathe/Projects"><i class='bx bxl-github'></i></box-icon></a>
+        <a href="https://github.com/jewathe"><i class='bx bxl-github'></i></box-icon></a>
         <a href="#"><i class='bx bxl-twitter'></i></box-icon></a>
       </div>
       <!--
@@ -120,7 +120,7 @@
             dynamiques.
             2. Intégration des services backend via des APIs RESTful
             pour assurer une communication efficace entre le front-end et le back-end.
-            <a href="#" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
+            <a href="https://github.com/jewathe/react-recipe" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
         </div>
