--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             Création d'Interfaces Intuitives et Esthétiques : Utilisation de
             technologies front-end telles que HTML, CSS, SCSS, Bootstrap et JavaScript (React, Angular)
             pour concevoir des interfaces utilisateur attractives et faciles à naviguer.
-            <a href="#" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
+            <a href="https://github.com/jewathe/papillon" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
         </div>
@@ -132,7 +132,7 @@
             robustes et d'API RESTful avec Node.js,
             Express, et Spring Boot.
             Conception et gestion de bases de données (MySQL, PostgreSQL, SQL Server).
-            <a href="#" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
+            <a href="https://github.com/jewathe/spring-boot-recipe" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
         </div>
@@ -144,7 +144,7 @@
             Écriture et exécution de tests unitaires et d'intégration
             en utilisant des frameworks comme Jest, Mocha, Pstman pour garantir la qualité et la
             fiabilité des applications.
-            <a href="#" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
+            <a href="https://github.com/jewathe/server-express" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
 
