--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             Création d'Interfaces Intuitives et Esthétiques : Utilisation de
             technologies front-end telles que HTML, CSS, SCSS, Bootstrap et JavaScript (React, Angular)
             pour concevoir des interfaces utilisateur attractives et faciles à naviguer.
-            <a href="https://github.com/jewathe/papillon" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
+            <a href="https://github.com/jewathe/restaurant" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
         </div>
