--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
     </div>
   </section>
   <section class="services" id="services">
-    <h2 class="heading">Services</h2>
+    <h2 class="heading">Quelques r&eacute;alisatios:</h2>
     <div class="services-container">
       <div class="service-box">
         <div class="service-info">
           <h4>Développeur UI</h4>
           <p> Conception et Développement d'Interfaces Utilisateur (UI)
             Création d'Interfaces Intuitives et Esthétiques : Utilisation de
-            technologies front-end telles que HTML, CSS, SCSS, Bootstrap et JavaScript (React, Angular)
+            technologies front-end telles que HTML, CSS, SCSS, Bootstrap.
             pour concevoir des interfaces utilisateur attractives et faciles à naviguer.
             <a href="https://github.com/jewathe/restaurant" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
@@ -116,9 +116,9 @@
       </div>
       <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Front-End</h4>
+          <h4>Développeur React</h4>
           <p>
-            1.Frameworks modernes: React, Angular pour développer des interfaces réactives et
+            1.Frameworks modernes: React pour développer des interfaces réactives et
             dynamiques.
             2. Intégration des services backend via des APIs RESTful
             pour assurer une communication efficace entre le front-end et le back-end.
@@ -127,25 +127,49 @@
 
         </div>
       </div>
-      <div class="service-box">
+	        <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Back-End</h4>
-          <p> Conception et développement de serveurs
-            robustes et d'API RESTful avec Node.js,
-            Express, et Spring Boot.
-            Conception et gestion de bases de données (MySQL, PostgreSQL, SQL Server).
-            <a href="https://github.com/jewathe/spring-boot-recipe" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
+          <h4>Développeur Angular</h4>
+          <p>
+            1.Frameworks modernes: Angular pour développer des interfaces réactives et
+            dynamiques.
+            2. Intégration des services backend via des APIs RESTful
+            pour assurer une communication efficace entre le front-end et le back-end.
+            <a href="https://github.com/jewathe/angular-cars" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
         </div>
       </div>
       <div class="service-box">
         <div class="service-info">
-          <h4>Tests et QA de Logiciel</h4>
-          <p>
-            Écriture et exécution de tests unitaires et d'intégration
-            en utilisant des frameworks comme Jest, Mocha, Pstman pour garantir la qualité et la
-            fiabilité des applications.
+          <h4>Développeur Spring Boot.</h4>
+          <p> Conception et développement de serveurs
+            robustes et d'API RESTful Spring Boot.
+            Conception et gestion de bases de données MySQL.
+            <a href="https://github.com/jewathe/spring-boot-recipe" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
+          </p>
+
+        </div>
+      </div>
+	  <div class="service-box">
+        <div class="service-info">
+          <h4>Développeur Node.js et PostgreSQL</h4>
+          <p> Conception et développement de serveurs
+            robustes et d'API RESTful avec Node.js,
+            Express.
+            Conception et gestion de bases de données PostgreSQL.
+            <a href="https://github.com/jewathe/server-express-postgres" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
+          </p>
+
+        </div>
+      </div>
+      <div class="service-box">
+        <div class="service-info">
+          <h4>Développeur Node.js et fichier JSON</h4>
+          <p> Conception et développement de serveurs
+            robustes et d'API RESTful avec Node.js,
+            Express.
+            Avec les données du fichier JSON.
             <a href="https://github.com/jewathe/server-express" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
