--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
   </section>
   <section class="services" id="services">
-    <h2 class="heading">Quelques r&eacute;alisatios:</h2>
+    <h2 class="heading">R&eacute;alisatios:</h2>
     <div class="services-container">
       <div class="service-box">
         <div class="service-info">
