--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar">
       <a href="#home" class="active">Home</a>
       <a href="#education">Education</a>
-      <a href="#services">Servces</a>
+      <a href="#services">Achievements</a>
 
     </nav>
   </header>
@@ -28,10 +28,10 @@
       <!--<h1>Hello, je suis <span>Jean</span></h1>-->
       <h6 class="text-animation"><span> </span></h6>
       <p>
-        Développeur Full Stack passionné par la création d'applications web robustes et évolutives.
-        Expertise en technologies front-end et back-end telles que HTML, CSS, JavaScript (React, Angular), Express,
-        Node.js, Spring Boot, PHP, Java, et SQL. Approche rigoureuse incluant l'utilisation de systèmes de contrôle
-        de version comme Git, des méthodologies agiles, et des pratiques de tests approfondis.
+        Full Stack Developer passionate about creating robust and scalable web applications.
+        Expertise in front-end and back-end technologies such as HTML, CSS, JavaScript (React, Angular), Express,
+        Node.js, Spring Boot, PHP, Java, and SQL. A rigorous approach that includes the use of version control systems 
+		like Git, agile methodologies, and thorough testing practices..
       </p>
 
       <div class="social-icons">
@@ -53,7 +53,7 @@
     </div>
   </section>
   <section class="education" id="education">
-    <h2 class="heading">&Eacute;ducation</h2>
+    <h2 class="heading">Education</h2>
     <div class="timeline-items">
 
       <div class="timeline-item">
@@ -61,12 +61,12 @@
         <div class="timeline-date">2023</div>
 
         <div class="timeline-content">
-          <h3>Programmation et Technologies d'Internet - dipl&ocirc;me AEC -Collège Universel -Montréal</h3>
+          <h3>Programming and Internet Technologies<br/> - AEC Diploma <br/> - Collège Universel -Montréal</h3>
 
-          <p>Un programme dans lequel j'ai appris les recentes technologies de d'Internet
-            et j'ai pu developper beaucoup d'application Web avec les frameworks modernes.
+          <p>
+		  A program in which I learned about recent Internet technologies and developed many web applications using modern frameworks.
 
-            Formation de janvier 2022 - janvier 2024.
+             Training from January 2022 to January 2024.
           </p>
         </div>
       </div>
@@ -77,9 +77,9 @@
         <div class="timeline-date">2014</div>
 
         <div class="timeline-content">
-          <h3>Sciences informatiques - dipl&ocirc;me de Master -&Eacute;cole supérieur d'Infotronique d'Haiti</h3>
-          <p> Formations universitaire.
-            De septembre 2013 - juillet 2014
+          <h3>Computer Sciences  <br/>- Master 's degree <br/>- Eacute;cole supérieur d'Infotronique d'Haiti</h3>
+          <p> University Education
+             From September 2013 - July 2014
           </p>
         </div>
       </div>
@@ -89,10 +89,10 @@
         <!--<div class="timeline-dot"></div>-->
         <div class="timeline-date">2013</div>
         <div class="timeline-content">
-          <h3>Sciences informatiques - dipl&ocirc;me de Licence -&Eacute;cole supérieur d'Infotronique d'Haiti</h3>
+          <h3>SComputer ciences<br/> - Bachelor's degree <br/>- &Eacute;cole supérieur d'Infotronique d'Haiti</h3>
 
-          <p> Formation universitaire.
-            De octobre 2009 - juillet 2013.
+          <p> University Education
+               From October 2009 - July 2013
           </p>
         </div>
       </div>
@@ -100,15 +100,13 @@
     </div>
   </section>
   <section class="services" id="services">
-    <h2 class="heading">R&eacute;alisatios:</h2>
+    <h2 class="heading">Achievements:</h2>
     <div class="services-container">
       <div class="service-box">
         <div class="service-info">
-          <h4>Développeur UI</h4>
-          <p> Conception et Développement d'Interfaces Utilisateur (UI)
-            Création d'Interfaces Intuitives et Esthétiques : Utilisation de
-            technologies front-end telles que HTML, CSS, SCSS, Bootstrap.
-            pour concevoir des interfaces utilisateur attractives et faciles à naviguer.
+          <h4> UI Developer</h4>
+          <p> User Interface (UI) Design and Development
+             Creation of Intuitive and Aesthetic Interfaces: Using front-end technologies such as HTML, CSS, SCSS, and Bootstrap to design attractive and easy-to-navigate user interfaces.
             <a href="https://github.com/jewathe/restaurant" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -116,12 +114,10 @@
       </div>
       <div class="service-box">
         <div class="service-info">
-          <h4>Développeur React</h4>
+          <h4>React Developer </h4>
           <p>
-            1.Frameworks modernes: React pour développer des interfaces réactives et
-            dynamiques.
-            2. Intégration des services backend via des APIs RESTful
-            pour assurer une communication efficace entre le front-end et le back-end.
+            1- Modern frameworks: React for developing reactive and dynamic interfaces.
+            2- Integration of backend services via RESTful APIs to ensure efficient communication between the front-end and the back-end.
             <a href="https://github.com/jewathe/react-recipe" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -129,12 +125,10 @@
       </div>
 	        <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Angular</h4>
+          <h4> Angular Developer</h4>
           <p>
-            1.Frameworks modernes: Angular pour développer des interfaces réactives et
-            dynamiques.
-            2. Intégration des services backend via des APIs RESTful
-            pour assurer une communication efficace entre le front-end et le back-end.
+           1- Modern frameworks: Angular to develop reactive and dynamic interfaces.
+           2- Integration of backend services via RESTful APIs to ensure efficient communication between the front-end and back-end.
             <a href="https://github.com/jewathe/angular-cars" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -142,10 +136,9 @@
       </div>
       <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Spring Boot.</h4>
-          <p> Conception et développement de serveurs
-            robustes et d'API RESTful Spring Boot.
-            Conception et gestion de bases de données MySQL.
+          <h4> Spring Boot Developer</h4>
+          <p> Design and development of robust servers and Spring Boot RESTful APIs.
+              Design and management of MySQL databases.
             <a href="https://github.com/jewathe/spring-boot-recipe" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -153,10 +146,9 @@
       </div>
 	  <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Rest API avec .Net Core</h4>
-          <p> Conception et développement de serveurs
-            robustes et d'API RESTful .Net Core.
-			Tester l'op&eacute;ration CRUD avec Postman.
+          <h4>Rest API Developer with .Net Core</h4>
+          <p> Design and development of robust servers and RESTful APIs with .Net Core.
+              Test CRUD operations with Postman.
             <a href="https://github.com/jewathe/CRUD-REST-API-NET_CORE" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -164,11 +156,9 @@
       </div>
 	  <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Node.js et PostgreSQL</h4>
-          <p> Conception et développement de serveurs
-            robustes et d'API RESTful avec Node.js,
-            Express.
-            Conception et gestion de bases de données PostgreSQL.
+          <h4> Node.js Developer and PostgreSQL</h4>
+          <p> Design and development of robust servers and RESTful APIs with Node.js, Express.
+              Design and management of PostgreSQL databases.
             <a href="https://github.com/jewathe/server-express-postgres" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -176,11 +166,8 @@
       </div>
       <div class="service-box">
         <div class="service-info">
-          <h4>Développeur Node.js et fichier JSON</h4>
-          <p> Conception et développement de serveurs
-            robustes et d'API RESTful avec Node.js,
-            Express.
-            Avec les données du fichier JSON.
+          <h4>Node.js Developer and JSON data</h4>
+          <p> Design and development of robust servers and RESTful APIs with Node.js, Express. Using data from the JSON file.
             <a href="https://github.com/jewathe/server-express" class="plus"><i class='bx bxl-github'></i></box-icon></i></a>
           </p>
 
@@ -200,7 +187,7 @@
       <li>Phone: (418) 655 2586</li>
     </ul>
     <p class="copyright">
-      &copy; Jean Therane | Tout droit r&eacute;serv&eacute;
+      &copy; Jean Therane | 2024;
     </p>
   </footer>
   <script src="script.js"></script>
