--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <li>Phone: (418) 655 2586</li>
     </ul>
     <p class="copyright">
-      &copy; Jean Therane | 2024;
+      &copy; Jean Therane | 2024
     </p>
   </footer>
   <script src="script.js"></script>
