--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="timeline-item">
         <!--<div class="timeline-dot"></div>-->
-        <div class="timeline-date">2023</div>
+        <div class="timeline-date">2024</div>
 
         <div class="timeline-content">
           <h3>Programming and Internet Technologies<br/> - AEC Diploma <br/> - Collège Universel -Montréal</h3>
@@ -89,7 +89,7 @@
         <!--<div class="timeline-dot"></div>-->
         <div class="timeline-date">2013</div>
         <div class="timeline-content">
-          <h3>SComputer ciences<br/> - Bachelor's degree <br/>- &Eacute;cole supérieur d'Infotronique d'Haiti</h3>
+          <h3>Computer Sciences<br/> - Bachelor's degree <br/>- &Eacute;cole supérieur d'Infotronique d'Haiti</h3>
 
           <p> University Education
                From October 2009 - July 2013
@@ -100,7 +100,7 @@
     </div>
   </section>
   <section class="services" id="services">
-    <h2 class="heading">Achievements:</h2>
+    <h2 class="heading">Achievements</h2>
     <div class="services-container">
       <div class="service-box">
         <div class="service-info">
