--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="timeline-date">2014</div>
 
         <div class="timeline-content">
-          <h3>Computer Sciences  <br/>- Master 's degree <br/>- Eacute;cole supérieur d'Infotronique d'Haiti</h3>
+          <h3>Computer Sciences  <br/>- Master 's degree <br/>- &Eacute;cole supérieur d'Infotronique d'Haiti</h3>
           <p> University Education
              From September 2013 - July 2014
           </p>
